force-app/main/default/objects/Account_Notification_Log__c/Account_Notification_Log__c.object-meta.xml
<CustomObject>
    <label>Account Notification Log</label>
    <nameField>
        <label>Account Notification Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Notification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>