force-app/main/default/objects/Account_Notification_Log__c/fields/Second_Log__c.field-meta.xml
<CustomField>
    <fullName>Second_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Log</label>
    <type>Checkbox</type>
</CustomField>